--- a/Glicko2.csproj
+++ b/Glicko2.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <PackageId>Glicko2.NET</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>MaartenStaa</Authors>
+    <PackageDescription>glicko2-csharp packaged for .NET Standard/.NET</PackageDescription>
+    <RepositoryUrl>https://github.com/RobinVangampelaere/Glicko2.NET</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
